# monster-maker

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml
e2e/: modalProject.spec.ts  projectFlow.spec.ts
e2e/fixtures/: electron.ts
electron/: electron-env.d.ts  main.ts  mainI18n.ts  preload.ts
electron/ipc/: contextMenuHandlers.ts  mapHandlers.ts  projectConfigHandlers.ts
electron/managers/: FileSystemService.ts  FileSystemWatcher.ts  ProjectConfigManager.ts  atlasService.ts
engine/: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yml   gantt.md  uml.md  vcpkg.json
engine/docker-scripts/: docker-build.sh  docker-clean.sh  docker-create-exe-file.sh  docker-dev.sh  docker-run.sh
engine/include/: Application.h  AudioService.h  Camera.h  CollisionService.h  Component.h  DialogBox.h  EditorConfig.h  EditorConfigLoader.h  Engine.h  EngineCommandListener.h  Entity.h  EntityLoader.h  EntityManager.h  ExplorationState.h  InputManager.h  Renderer.h  ResourceManager.h  Shader.h  State.h  StateManager.h  TextManager.h  TextRenderer.h  Texture.h
engine/include/components/: AnimationComponent.h  ColliderComponent.h  Component.h  InteractionComponent.h  MovementComponent.h  PersistenceComponent.h  PositionComponent.h  RenderComponent.h  ScriptComponet.h
engine/include/enums/: BasicAnimation.h  ComponentsType.h  DialogSpeed.h  Direction.h  EntityLayer.h  EntityTag.h  GameConfig.h  ShaderPath.h
engine/include/memory/: DataManager.h  SaveManager.h  SessionManager.h
engine/include/scripting/: ScriptBindings.h  ScriptEngine.h
engine/include/service/: BlockEntityComponentByTag.h  BordersMapService.h  CollisionService.h  InteractionService.h
engine/include/structs/: Animation.h  Character.h  DebugHelper.h  DialogData.h  DialogTypes.h  Position.h  ShaderPath.h  SpriteRect.h
engine/include/ui/: RmlFileInterface.h  RmlRenderInterface.h  RmlSystemInterface.h  UiDocument.h  UiDocumentLoader.h  UiManager.h
engine/include/ui/text/: DialogLoader.h  DialogManager.h  LocalizationManager.h
engine/resources/: textoLua.lua
engine/resources/dialogues/: npc_elder.json
engine/resources/locals/: es.json
engine/resources/maps/data/: SuperTesting.json  map32-super.json  paletaTown.json  test_map.json  test_player.json
engine/resources/scripts/: apollo.lua
engine/resources/scripts/items/: item.lua
engine/resources/scripts/player/: move.lua
engine/resources/scripts/teleport/: teleport.lua
engine/resources/scripts/trigger/: trigger.lua
engine/resources/shaders/: ui.frag
engine/resources/sprites/: .1.json
engine/resources/ui/: test.rml  test33.ui  text.ui  ui.ui
engine/resources/ui/.test33/: test33_HTML.rmli
engine/resources/ui/.text/: text_CSS.css  text_HTML.rmli
engine/resources/ui/.ui/: ui_CSS.css  ui_HTML.rmli
engine/shaders/: sprite.frag  ui.vert
engine/src/: main.cpp
engine/src/audio/: AudioService.cpp
engine/src/core/: Application.cpp  EditorConfig.cpp  EditorConfigLoader.cpp  Engine.cpp  EngineCommandListener.cpp  StateManager.cpp
engine/src/entities/: CollisionService.cpp  Entity.cpp  EntityLoader.cpp  EntityManager.cpp
engine/src/entities/components/: AnimationComponent.cpp  MovementComponent.cpp  RenderComponent.cpp  ScriptComponent.cpp  uml.md
engine/src/entities/service/: BlockEntityComponentByTag.cpp  BordersMapService.cpp  CollisionService.cpp  InteractionService.cpp  uml.md
engine/src/graphics/: Camera.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp  uml.md
engine/src/graphics/Shader/: sprite.frag  sprite.vert
engine/src/input/: InputManager.cpp
engine/src/memory/: DataManager.cpp  SaveManager.cpp  SessionManager.cpp
engine/src/scripting/: ScriptBindings.cpp  ScriptEngine.cpp
engine/src/states/: ExplorationState.cpp
engine/src/ui/: DialogBox.cpp  RmlSystemInterface.cpp  TextManager.cpp  TextRenderer.cpp  UiDocument.cpp  UiDocumentLoader.cpp  UiManager.cpp  uml.md
engine/src/ui/text/: DialogLoader.cpp  DialogManager.cpp  LocalizationManager.cpp
engine/tests/mocks/: MockComponent.h  MockGLFW.cpp  MockGLFW.h  MockScriptComponent.cpp  MockState.h
engine/tests/unitary/: BorderMapServiceTest.cpp  CollisionServiceTest.cpp  DialogBoxTest.cpp  EntityManagerTest.cpp  EntityTest.cpp  InputManagerTest.cpp  SesionManagerTest.cpp  StateManagerTest.cpp
global/checks/: checkInvalidChars.ts
global/types/: engineConfig.ts  engineLog.ts  fileData.ts  fileItem.ts  folderNode.ts  projectConfig.ts  projectData.ts  projectFile.ts  tileSetConfig.ts  toolType.ts
src/: i18n.ts  index.css  main.tsx  preload.d.ts
src/CodeEditor/: CodeEditor.css  CodeEditor.tsx  CodeEditorGState.ts  CodeEditorLoadingOverlay.css  CodeEditorLoadingOverlay.tsx  luaDiagnostics.ts  monacoConfig.ts
src/DebugTerminal/: DebugTerminal.css  DebugTerminal.test.tsx  DebugTerminal.tsx
src/DialogEditor/: DialogEditor.css  DialogEditor.test.tsx  DialogEditor.tsx  DialogueGState.test.ts  DialogueGState.ts  LocalizationGState.test.ts  LocalizationGState.tsx  LocalizationTable.css  LocalizationTable.tsx  useDialogEditor.test.ts  useDialogEditor.ts  useLocalizationTable.test.ts  useLocalizationTable.ts
src/Entity/: Entity.css  Entity.test.tsx  Entity.tsx
src/Files/: FileList.css  FileList.test.tsx  FileList.tsx  FolderEventsGState.test.ts  FolderEventsGState.ts  FolderTree.css  FolderTree.tsx
src/Layout/: CodeEditorLayoutGState.test.ts  CodeEditorLayoutGState.ts  Layout.css  Layout.test.tsx  Layout.tsx  LayoutCodeEditor.css  LayoutCodeEditor.test.tsx  LayoutCodeEditor.tsx  UiScriptPanel.css  UiScriptPanel.tsx
src/Map/: Map.css  Map.test.tsx  Map.tsx  MapGState.test.ts  MapGState.ts  MapLoadingOverlay.css  MapLoadingOverlay.tsx  mapUtils.test.ts  mapUtils.ts
src/Project/: ModalProject.css  ModalProject.test.tsx  ModalProject.tsx  Project.css  Project.tsx  ProjectConfigGState.test.ts  ProjectConfigGState.ts
src/Tagger/: Tagger.css  Tagger.test.tsx  Tagger.tsx  useEngineConfigStore.test.ts  useEngineConfigStore.ts
(+140 files in other folders)
